tests/hevm/pass/maps/maps.act
constructor of Map
interface constructor()

iff

  CALLVALUE == 0

creates
  uint256 val := 0
  mapping(uint => uint) f := [0 := 42]

behaviour val of Map
interface val()

iff

  CALLVALUE == 0

returns pre(val)

behaviour f of Map
interface f(uint x)

iff

  CALLVALUE == 0

returns pre(f[x])


behaviour set of Map
interface set(uint value, uint key)

iff

  CALLVALUE == 0

storage

  f[key] => value

returns 1